updates early February 2020

--- a/Statements/Xambo.MusicStatement.tex
+++ b/Statements/Xambo.MusicStatement.tex
@@ -104,15 +104,15 @@ In the past I enjoyed pop-rock bands, most of them related to drone music style,
 
 I chose a male pseudonym (peterMann) for my works with electronic music because I wanted to contribute to the minimal techno scene, which has been always a male dominated space, in which the real identity is hidden. Accordingly, I wanted to keep both my identity and gender anonymous. Lately, I have been reconsidering this position inspired by female activist groups and individuals, who work towards making more visible women's music works, e.g. AGF, Liz Dobson, and Female's Pressure, among others. Thus, I keep the same nickname, but I do not necessarily hide my gender anymore.
 
-Besides performing, I like to co-organize concerts and help to create and curate alternative sonic experiences, and contribute to the local and international experimental electronic music scene. I have co-organized live coding sessions in Barcelona: Live Coding Sessions (Niu, 03/15/2012), Live Coding Sessions II (Niu, 03/22/2013), and Perspectives on Multichannel Live Coding with 16 speakers (Sala Polivalent UPF Poblenou, 10/04/2013). Also, I have co-chaired two concerts for the WAC 2016 conference hosted by Georgia Tech in Atlanta. One of these concerts was audience device participation only, a successful challenge in terms of attendance and experience. I would like to continue co-organizing concerts of this nature wherever I am based.
+Besides performing, I like to co-organize concerts and help to create and curate alternative sonic experiences, and contribute to the local and international experimental electronic music scene. I have co-organized live coding sessions in Barcelona: Live Coding Sessions (Niu, 03/15/2012), Live Coding Sessions II (Niu, 03/22/2013), and Perspectives on Multichannel Live Coding with 16 speakers (Sala Polivalent UPF Poblenou, 10/04/2013). Also, I have co-chaired two concerts for the WAC 2016 conference hosted by Georgia Tech in Atlanta. One of these concerts was audience device participation only, a successful challenge in terms of attendance and experience. I like to continue co-organizing concerts of this nature wherever I am based.
 
 \section*{From classical training to DIY}
 
 After a classical training on interpreting others' pieces with piano, I remember discovering that I could compose my own music using traditional instruments (e.g. Spanish guitar) and electric instruments (e.g. bass guitar). With colleagues, we shared music sketches and learned to compose together. Software tools for sound and music came soon later. We also had to learn the new tools by ourselves (e.g. FruityLoops, SoundForge, Cubase, Max MSP/PD, etc). In the following years, a wide range of sound and music technologies has emerged. These technologies allow us for multiple ways of approaching sound and music, and learning computing on the way, in a DIY fashion.   
 
-Over the 1990s I composed, played the bass guitar and sung as part of the early Spanish post-punk, indie and post-rock scene. With my first band, we learned how to compose and create a decent song just with an electric guitar, a bass guitar, a drum set, and two female voices. With my second band, we explored how to compose instrumental music together between 5-6 musicians (electric guitars, bass guitars, keyboards, sampler, drum set, percussion set, and a vibraphone) by: improvising numerous hours, learning improvisation methods like John Zorn's Cobra from the hand of Orquestra del Caos, and collaborating with other bands and individuals. After a hiatus period, I have continued working with instrumental music but focusing on electronic music. 
+Over the 1990s I composed, played the bass guitar and sung as part of the early Spanish and Catalan post-punk, indie and post-rock scene. With my first band, we learned how to compose and create a decent song just with an electric guitar, a bass guitar, a drum set, and two women voices. With my second band, we explored how to compose instrumental music together between 5-6 musicians (electric guitars, bass guitars, keyboards, sampler, drum set, percussion set, and a vibraphone) by: improvising numerous hours, learning improvisation methods like John Zorn's Cobra from the hand of Orquestra del Caos, and collaborating with other bands and individuals. After a hiatus period, I have continued working with instrumental music but focusing on electronic music. 
 
-I have been making electronic music since mid-2000s working with my portable audio recorder, Ableton Live, Supercollider and DIY instruments. I have been exploring live coding practices, spatial audio, and the use of tangible user interfaces for real time performance. Lately, I have become interested in applying machine listening techniques to my practice. I am also interested in working with MC voices (typical in hip hop and grime scene) as textures, inspired from living in London and Atlanta, GA, and exploring approaches to DIY portable electronic music kits for music performance. 
+I have been making electronic music since mid-2000s working with my portable audio recorder, Ableton Live, SuperCollider and DIY instruments. I have been exploring live coding practices, spatial audio, and the use of tangible user interfaces for real time performance. Lately, I have become interested in applying machine listening techniques to my practice. I am also interested in working with MC voices (typical in hip hop and grime scene) as textures, inspired from living in London and Atlanta, GA, and exploring approaches to DIY portable electronic music kits for music performance. After living in Norway, and due to my passion for minimalism, silence has become a theme!
 
 %\vspace{1cm}
 \vfill{}
