--- a/Statements/Xambo.TeachingStatement.tex
+++ b/Statements/Xambo.TeachingStatement.tex
@@ -87,38 +87,43 @@ Anna Xambó, PhD\\
 
 \section*{My Teaching Experience and Style}
 
-I am used to adapt and deliver teaching content to different groups of students. I have six years of teaching experience (1999--2005), including (1) graduate and undergraduate courses of audio, video, motion graphics, and crossmedia in two Catalan/Spanish universities (Universitat Politècnica de Catalunya and Universitat de Vic) and an art institute of animation and multimedia (Media Art Institute Fak d’Art); (2) professional courses of audio and multimedia software in an IT training company (Crea Formación); and (3) preschool \& primary school courses of crossmedia in three schools (Escola Magòria, Escola Costa i Llobera, and Escola Glòries) for a research project, in which I was the PI. 
+I am used to adapt and deliver teaching content to different groups of students. I have more than 7 years of teaching experience (1999--2005 and 2018--present), including (1) graduate and undergraduate courses of audio, video, motion graphics, and crossmedia in two Catalan/Spanish universities (Universitat Politècnica de Catalunya and Universitat de Vic) and an art institute of animation and multimedia (Media Art Institute Fak d’Art); (2) professional courses of audio and multimedia software in an IT training company (Crea Formación); (3) preschool \& primary school courses of crossmedia in three schools (Escola Magòria, Escola Costa i Llobera, and Escola Glòries) for a research project, in which I was the PI;  (4) graduate courses in physical computing, audio programming and HCI at the Norwegian University in Science and Technology (NTNU) and University of Oslo (UiO); and (5) undergraduate courses in audio electronics and DSP at De Monfort University (Leicester, UK).
 
-My experience includes both lectures and workshops. My lecture-based classes give a theoretical stance of a given topic. Typically, a period of time is allocated for one-to-one or group-to-team discussions on the projects. I also have experience with software-based classes that are practical in nature and taught to students working with their computers. 
+My experience includes both lectures and workshops. My lecture-based classes give a theoretical stance of a given topic. Depending on the course and final assignment, a period of time is allocated for one-to-one or group-to-team discussions on the projects. I also have experience with software-based classes that are practical in nature and taught to students working with their computers or lecture vs.\ lab sessions for the engineering-like courses. I am also used to teach in cross-campus situations with both co-located and remote students.
 
-My teaching style has been practice and project studio based. This approach aligns with learning from solving real-world problems. I am interested in promoting ownership, agency, and autonomy among students through both teamwork and individual work around their topics of interest. My vision of the future of university-based computing education aligns with using suitable technologies that support both the individual pace of learning as well as collaborative forms of learning. Students take agency of their projects and the professor guides them over the course of their journey. 
+My teaching style has been practice and project studio based. This approach aligns with learning from solving real-world problems. I am interested in promoting ownership, agency, and autonomy among students through both teamwork and individual work around their topics of interest. My vision of the future of computing education aligns with using suitable technologies that support both the individual pace of learning as well as collaborative forms of learning. Students take agency of their projects and the professor guides them over the course of their journey. 
 
 My teaching style is interdisciplinary. For example, I co-designed a course for undergraduates, \emph{Crossmedia}. This course promoted work by mixing sound, image, animation, video, and motion graphics. In 2004, we were awarded with a research grant to adapt these contents to preschoolers and grade-schoolers.
 
-I try to continuously reflect on my own teaching style because there are always areas of improvement. For example, in May 2017 I have passed successfully the course ``Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars'' led by Katherine Samford at Georgia Tech. In this course, I have strengthened my oral communication and teaching skills in English, given that I am a Catalan/Spanish native speaker. Also, I am currently pursuing the Learning and Teaching in Higher Education course at Queen Mary University of London (QMUL).
+I try to continuously reflect on my own teaching style because there are always areas of improvement. For example, in May 2017 I have passed successfully the course ``Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars'' led by Katherine Samford at Georgia Tech. In this course, I have strengthened my oral communication and teaching skills in English, given that I am a Catalan/Spanish native speaker. Also, I successfully pursued the Learning and Teaching in Higher Education course at Queen Mary University of London (QMUL) becoming an Associate Fellow at the Higher Education Academy in 2019.
 
-Another area of improvement is moving my teaching style closer to the Coursera model of including more theory in the class and let students explore the practical aspects by their own based on a selected list of exercises and resources. However, group discussion in the class is important to solidify content knowledge. During the lectures, it is essential to make sure that the students are understanding the content with open questions, dialogues and quizzes. My teaching style is in alignment with ideas from (1) Dewey's \emph{experiential learning} pedagogy about learning through experiences, and (2) Papert's constructionism learning about \emph{learning by making}, and \emph{learning to learn}.
+Another area of improvement is moving my teaching style closer to the Coursera model of including more theory out of the class, and allocate time in class for group discussion to solidify content knowledge. During the lectures, it is essential to make sure that the students are understanding the content with open questions, dialogues and quizzes. It is also important to provide a selected list of resources so that students can explore the practical aspects by their own if they are interested in knowing more.
+My teaching style is in alignment with ideas from (1) Dewey's \emph{experiential learning} pedagogy about learning through experiences, and (2) Papert's constructionism learning about \emph{learning by making}, and \emph{learning to learn}.
 
-With most technology and computing-related subjects, the content can vary from one term to the next given the fast pace of the discipline. As a professor, you need to be actively updating the contents, and having a constant attitude of learning to learn. Preparing a new class is always exciting and challenging! Also, it is important to transfer learning to learn to the students with concepts that are transferable, e.g., to other software environments or real-world situations. Similarly, it seems that making more visible the potential of social applications from the use of technologies (e.g., music technology) is important to attract more female students into the field, which I take into consideration.  
+With most technology and computing-related subjects, the content can vary from one term to the next given the fast pace of the discipline. As a professor, you need to be actively updating the contents, and having a constant attitude of learning to learn. Preparing a new class is always exciting and challenging! Also, it is important to transfer learning to learn to the students with concepts that are transferable, e.g., to other software environments or real-world situations. Similarly, it seems that making more visible the potential of social applications from the use of technologies (e.g., music technology) is important to attract more women students into the field, which I take into consideration.  
 
 \section*{Teaching Materials}
 
 Typically, I provide the teaching material in digital format, so that students can download and master it. I usually give a basic set of compulsory exercises for all levels i.e. beginners and experts, and additional voluntary exercises for the advanced students. I published a book, \emph{Herramientas de Diseño Digital} (Anaya-Multimedia, 2004). This book includes the course materials that I designed and used during my teaching at the Media Art Institute Fak d'Art. This material stems from 4 years of teaching (1999-2003). Publishing a book is helpful for consolidating and sharing teaching materials beyond the students from the institution. 
+I am also used to video record my lectures if the institution's facilities allow for it.
 
 \section*{Mentoring and Guest Lectures}
 
-At Georgia Tech I have been co-mentoring graduate students and giving guest talks. Similarly, I have been co-advising at QMUL. My approach is close to communities of practice: conversations influence the evolvement of the students' projects and senior students help younger students. It is rewarding to see the results in their projects.
+At Georgia Tech I have been co-mentoring graduate students and giving guest talks. Similarly, I have been co-advising at QMUL and supervising at NTNU/UiO. My approach is close to communities of practice: conversations influence the evolvement of the students' projects and senior students help younger students. It is rewarding to see the results in their projects.
 
-During the academic year 2015--2016, I co-advised Marc Huet and Travis Gasque (master's students in digital media, School of Literature, Media, and Communication (LMC)) and Anna Weisling (PhD student in digital media, LMC) for their graduate design project TuneTable (see our TEI '17 publication for further details). This work has been part of Prof. Brian Magerko’s Digital Media studio course at Georgia Tech, which has informed a successful and competitive National Science Foundation (NSF) funded grant Advancing Informal STEM Learning. During Spring 2016, I also co-advised Scott Wise (graduate student in Computer Science, School of Computer Science) for a project of automatic algorithmic composition. From September 2015 to May 2017, I have been co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Prof. Jason Freeman. From this work we have published at the International Conference of Live Interfaces 2016 and Audio Mostly 2017 (see Peer-Reviewed Conference Papers). We are also preparing a journal article.
+During the academic year 2015--2016, I co-advised Marc Huet and Travis Gasque (master's students in digital media, School of Literature, Media, and Communication (LMC)) and Anna Weisling (PhD student in digital media, LMC) for their graduate design project TuneTable (see our TEI '17 publication for further details). This work has been part of Prof. Brian Magerko’s Digital Media studio course at Georgia Tech, which has informed a successful and competitive National Science Foundation (NSF) funded grant Advancing Informal STEM Learning. During Spring 2016, I also co-advised Scott Wise (graduate student in Computer Science, School of Computer Science) for a project of automatic algorithmic composition. From September 2015 to May 2017, I have been co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Prof. Jason Freeman. From this work we have published at the International Conference of Live Interfaces 2016 and Audio Mostly 2017 (see Peer-Reviewed Conference Papers). In 2018, we have also published a journal article for the Journal of Audio Engineering Society.
+
 In 2018, I have co-advised Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) for her master project on automated generation of soundscapes using content from Audio Commons.
+
+I am currently supervising Karolina Jawad for her 30-credit master thesis from the Music, Communication and Technology program (NTNU/UiO) to be due in summer 2020. A related paper has been published at the International Conference of Live Interfaces 2020.
 
 \section*{My Teaching Areas of Interest}
 
-My teaching areas of interest include: human-computer interaction; interaction design; tangible, physical and social computing; arts and social sciences research methods applied to music computing; creative programming; computer music algorithms and practices; and real-time interactive systems for music performance; among others. 
+My teaching areas of interest include: physical computing applied to audio and music; audio electronics; human-computer interaction; audio programming; creative programming; computer music algorithms and practices; and real-time interactive systems for music performance; among others. 
 
 \section*{Teaching Music Technology Related Courses}
 
-Teaching music technology related courses can be based on the experience of own music practice. This approach shows to the students that you have your own voice. However, it can be a biased situation. The concepts on music technology can be (and should be) illustrated with the combination of own examples and others' complementary examples. In order to overcome a biased situation, the principles need to be taught separated from  personal taste and a particular aesthetic. The evaluation criteria needs to be clear for both students and professor, so that musical aesthetics should not interfere in grading. Promoting \emph{critical listening} in the discussion is an essential skill for students of music technology related subjects. 
+Teaching music and audio technology related courses can be based on the experience of own music practice. This approach shows to the students that you have your own voice. However, it can be a biased situation. The concepts on music technology can be (and should be) illustrated with the combination of own examples and others' complementary examples. In order to overcome a biased situation, the principles need to be taught separated from  personal taste and a particular aesthetic. The evaluation criteria needs to be clear for both students and professor, so that musical aesthetics should not interfere in grading. Promoting \emph{critical listening} in the discussion is an essential skill for students of music and audio technology related subjects. 
 
 %\vspace{1cm}
 \vfill{}
