--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -300,7 +300,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
 
-\years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: an interdisciplinary approach. Routledge. pp. 248-282. ISBN 9781138093966.\\
+\years{2019}\textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). “Leveraging Online Audio Commons Content For Media Production". In Michael Filimowicz ed. Foundations in Sound Design for Linear Media: An Interdisciplinary Approach. Routledge. pp. 248-282. ISBN 9781138093966.\\
 \years{2016}\textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.\\
 \years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C., Jordà, S. (2013). “Video Analysis for Evaluating Music Interaction: Musical Tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
@@ -318,11 +318,12 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-\years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In Proceedings of the Web Audio Conference 2019 (WAC '19). Trondheim, Norway. \emph{Best Paper Award}.\\
-\years{2019a}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (2019) "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil. pp. 216–221.\\
-\years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
-\years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
-\years{2018d}\textbf{Xambó, A.}, Pauwels, J., Roma, G., Barthet, M. Fazekas, G. (2018) "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Proceedings of Audio Mostly 2018: Sound in Immersion and Emotion (AM '18). Wrexham, United Kingdom. \\
+\years{2020}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway.\\
+\years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. \emph{Best Paper Award}.\\
+\years{2019a}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (2019) "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME ’19)}. Porto Alegre, Brazil. pp. 216–221.\\
+\years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In \emph{Proceedings of the Web Audio Conference (WAC '18)}. Berlin, Germany.\\
+\years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In \emph{Proceedings of the Web Audio Conference (WAC '18)}. Berlin, Germany.\\
+\years{2018d}\textbf{Xambó, A.}, Pauwels, J., Roma, G., Barthet, M. Fazekas, G. (2018) "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In \emph{Proceedings of Audio Mostly 2018: Sound in Immersion and Emotion (AM '18)}. Wrexham, United Kingdom. \\
 \years{2018c}\textbf{Xambó, A.} (2018) “Who Are the Women Authors in NIME?---Improving Gender Balance in NIME Research". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA. pp. 174--177.\\ 
 \years{2018b}\textbf{Xambó, A.}, Roma, G., Lerch, A., Barthet, M., Fakekas, G. (2018) “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA. pp. 364--369.\\ 
 \years{2018a}Weisling, A., \textbf{Xambó, A.}, Olowe, I., Barthet, M. (2018) “Surveying the Compositional and Performance Practices of Audiovisual Practitioners". In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '18)}. Blacksburg, Virginia, USA. pp. 344--345.\\ 
@@ -331,7 +332,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London\\ 
 \years{2017a}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and Ownership with a Tangible Computational Music Installation for Informal Learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
 \years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to Broaden Participation in Computing and Music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
-\years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". In \emph{Proceedings of the International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 65--73.\\
+\years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 65--73.\\
 \years{2014}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
 \years{2013}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). “A Content-based System for Music Recommendation and Visualization of User Preferences Working on Semantic Notions". In \emph{IEEE 9th International Workshop on Content-Based Multimedia Indexing (CBMI '13)}. Madrid. pp. 249--252.\\
 \years{2012}Roma, G., \textbf{Xambó, A.}, Herrera, P. and Laney, R. (2012). “Factors in human recognition of timbre lexicons generated by data clustering". In \emph{Proceedings of the 9th Sound and Music Computing Conference (SMC 2012)}. Copenhagen, Denmark. pp. 23--30.\\
@@ -349,7 +350,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven Musical Language to Live Coding: A Case Study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
-\years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 315--316.\\
+\years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference on Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 315--316.\\
 \years{2015}Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). “EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". In \emph{Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15)}. Charlotte, NC. pp. 109--110.\\
 \years{2014}\textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an Integrated Methodological Framework for Understanding Embodiment in HCI". In \emph{Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI '14)}. Toronto. pp. 1411--1416.
 
@@ -535,6 +536,8 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2017c}\textbf{Xambó, A.}, Roma, G. (August 21, 2017). “Hyperconnected Action Painting". \emph{WAC 2017}. Oxford House Theatre. London, UK. \\
 \years{2017b}Weisling, A., \textbf{Xambó, A.} (May 16, 2017). “Beacon". \emph{NIME 2017}. Stengade. Copenhagen, Denmark.\\
 \years{2017a}Weisling, A., \textbf{Xambó, A.} (February 11, 2017). “Beacon". \emph{Root Signals Festival 2017}. Georgia Southern University. Statesboro, Georgia, United States.\\
+\years{2016b} Roma, G., \textbf{Xambó, A.}, Freeman, J. (November 2, 2016). Do the Buzzer Shake. \emph{The First Annual Women in Music Tech: Concert and Reception}. The Garage. Atlanta, GA, USA.\\
+\years{2016a} Roma, G., \textbf{Xambó, A.}, Freeman, J. (July 1, 2016). “Do the Buzzer Shake". \emph{ICLI 2016}. St Mary's Church, Kemptown, Brighton, UK.\\
 \years{2012}pulso (Roma, G., \textbf{Xambó, A.}). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Roma, G., \textbf{Xambó, A.}). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
 \years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
@@ -792,7 +795,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2020}\textsc{Poster Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
 \years{2019f}\textsc{Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
 \years{2019e--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
-\years{2019d}\textsc{Program Co-Chair}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
+\years{2019d}\textsc{Program Co-Chair}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019b}\textsc{Paper Co-Chair \& Session Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
