--- a/Statements/Xambo.DiversityStatement.tex
+++ b/Statements/Xambo.DiversityStatement.tex
@@ -87,7 +87,7 @@ Anna Xambó, PhD\\
 
 \section*{Why Diversity Matters}
 
-A diverse environment is important for understanding and respecting other points of view and facilitating rich collaborations. In the anthropology field it is said: \emph{understanding "the other" helps to understand oneself}. In the field of music technology, as it also happens in other STEM fields, there is a well-known problem of lack of diversity. As a woman in music technology, I am particularly concerned about the lack of women in my field, and thus the lack of role models. Overall, my actions are committed to diversity and equity in higher education and the music technology industry.
+A diverse environment is important for understanding and respecting other points of view and facilitating rich collaborations. In the anthropology field it is said: \emph{understanding "the other" helps to understand oneself}. In the field of music and audio technology, as it also happens in other STEM fields, there is a well-known problem of lack of diversity. As a woman working in music and audio technology, I am particularly concerned about the lack of women in my field, and thus the lack of role models. Overall, my actions are committed to diversity and equity in higher education and the music technology industry.
 
 \section*{We Are Agents of Change}
 
@@ -95,17 +95,21 @@ We can be agents of change. As part of the \href{http://webaudio.gatech.edu/}{WA
 
 I took it as a personal research and conducted a series of informal interviews with women in the field of music technology at different stages of their life: an undergrad student, two grad students, an early career lecturer, a high school teacher, and a music technology's program coordinator. In April 2016, I was invited as a \href{http://wiswos.bitbucket.org/index.html\%3Fp=435.html}{keynote speaker in conversation with Liz Dobson} at the event \emph{Women in Sound Women on Sound on Educating Girls into Sound}, held in Lancaster, UK. We discussed the findings and continued the discussion at the Georgia Tech Center for Music Technology (GTCMT) department. Then, we decided to create \href{http://www.gtcmt.gatech.edu/}{Women in Music Tech} to sustainably bring more women into the program, an organization of which I was co-chair from 2017 to 2018.
 
-\section*{Women in Music Tech (2017-2018)}
+\section*{Women in Music Tech (2017--2018)}
 
-\href{http://www.gtcmt.gatech.edu/womeninmusictech}{Women in Music Tech} has been an exciting adventure. This organization has been possible with the collaboration of everyone from the GTCMT department: students, staff, and faculty members. We were also in conversations with a number of organizations and individuals from Georgia Tech that are collaborating, supporting, and helping us to define our agenda. During the first year, we programmed outreach events, launched a bi-monthly newsletter, and are making sure that there is a safe and respectful space for everybody. With only one year of actions, the graduate level of applications has improved but is still not ideal (female participation 21.1\% (2015--16), 16.3\% (2016--17), 25.4\% (2017--18)). Our next milestone was to create a sustainable organization. 
+\href{http://www.gtcmt.gatech.edu/womeninmusictech}{Women in Music Tech} (WiMT) has been an exciting adventure. This organization has been possible with the collaboration of everyone from the GTCMT department: students, staff, and faculty members. We were also in conversations with a number of organizations and individuals from Georgia Tech that are collaborating, supporting, and helping us to define our agenda. During the first year, we programmed outreach events, launched a bi-monthly newsletter, and are making sure that there is a safe and respectful space for everybody. With only one year of actions, the graduate level of applications has improved but is still not ideal (female participation 21.1\% (2015--16), 16.3\% (2016--17), 25.4\% (2017--18)). Our next milestone was to create a sustainable organization. 
 
-\section*{WiNIME (2018)}
+\section*{WiNIME (2018--present)}
 
-As a follow up of WiMT, I looked into the underrepresentation of women at the New Interfaces for Musical Expression (NIME) conference in the paper  \href{http://annaxambo.me/pub/Xambo_2018_WiNIME.pdf}{Who Are the Women Authors in NIME? - Improving Gender Balance in NIME Research} (Xambó 2018), and created the [WiNIME directory](https://axambo.github.io/directory-of-winime/).
+As a follow up of WiMT, I looked into the underrepresentation of women at the New Interfaces for Musical Expression (NIME) conference in the paper \href{http://annaxambo.me/pub/Xambo_2018_WiNIME.pdf}{Who Are the Women Authors in NIME? - Improving Gender Balance in NIME Research} (Xambó 2018), and created the \href{https://axambo.github.io/directory-of-winime/}{WiNIME directory}. In 2019, I have been appointed Women in NIME (WiNIME) officer. 
+
+\section*{WoNoMute (2018--2019)}
+
+I am founder of the organization \href{http://wonomute.no}{Women Nordic Music Technology} (WoNoMute), which started in August 2018 together with the beginning of the master Music Communication and Technology, both activities supported conjointly by the Norwegian University of Science and Technology and University of Oslo with the objective of improving the underrepresentation of women in techno-scientific fields. The organization’s aim is to promote and connect the work of women in music technology at local, national and international levels. We have produced a range of activities and material for the online archive. A brief about how the first year went can be found here: \href{http://wonomute.no/blog/1st-anniversary-of-WoNoMute/}{http://wonomute.no/blog/1st-anniversary-of-WoNoMute/}
 
 \section*{What Else Can We Do?}
 
-As agents of change, we can improve our environment establishing constant dialogue with our co-workers in the department about our actions and achievements related to improving the representation of women in music technology. Furthermore, attending events related to diversity, such as the \href{http://www.diversity.gatech.edu/diversitysymposium}{Diversity Symposium 2016} at Georgia Tech, is important to network, join forces and share current issues and future strategies. 
+As agents of change, we can improve our environment establishing constant dialogue with our co-workers in the department about our actions and achievements related to improving the representation of women in music and audio technology. Furthermore, attending events related to diversity, such as the \href{http://www.diversity.gatech.edu/diversitysymposium}{Diversity Symposium 2016} at Georgia Tech, is important to network, join forces and share current issues and future strategies. 
 
 %\vspace{1cm}
 \vfill{}
