--- a/Statements/Xambo.ResearchStatement.tex
+++ b/Statements/Xambo.ResearchStatement.tex
@@ -95,13 +95,13 @@ My research contributes to the fields of \textbf{HCI} and \textbf{sound} \& \tex
 \item \textbf{Experience}: bringing more egalitarian, collaborative and participatory experiences to the fore e.g. multichannel experiences, participatory performances, DIY workshops. 
 \end{enumerate}
 
-\section*{Intelligent Computer-Supported Collaborative Work: Tangible Music Everywhere}
+\section*{Intelligent Computer-Supported Collaborative Music Everywhere}
 
-I envision pushing the boundaries of \textbf{technology}, \textbf{design}, and \textbf{experience} towards more collaborative, egalitarian and sustainable spaces, what I term \textbf{tangible music everywhere}. My mission is to do interdisciplinary research that embraces techniques and research methods from engineering, social sciences, and the arts for creating a new generation of interactive music systems.\\
+I envision pushing the boundaries of \textbf{technology}, \textbf{design}, and \textbf{experience} towards more collaborative, egalitarian and sustainable spaces, what I term \textbf{intelligent computer-supported collaborative music everywhere}. My mission is to do interdisciplinary research that embraces techniques and research methods from engineering, social sciences, and the arts for creating a new generation of interactive music systems.\\
 
-My area of expertise is HCI applied to the development of new technologies and user interfaces that promote new experiences. I am particularly interested in the creation of cutting-edge pedagogical interfaces that help to understand \textbf{STEM} (Science, Technology, Engineering, Math) concepts, with the special use case of \textbf{music technology} because it can attract more diversity to the scientific fields. For example, see my work on the National Science Foundation funded project TuneTable, a musical tabletop for museums that promotes computational concepts by making music.\\
+My area of expertise is HCI applied to the development of new technologies and user interfaces that promote new experiences. I am particularly interested in the creation of cutting-edge pedagogical interfaces that help to understand \textbf{STEM} (Science, Technology, Engineering, Math) concepts, with the special use case of \textbf{music and audio technology} because it can attract more diversity to the scientific fields. For example, see my work on the National Science Foundation funded project TuneTable, a musical tabletop for museums that promotes computational concepts by making music.\\
 
-An interesting characteristic of these novel interfaces is their potential support to collaboration, an aspect that I have been working since my PhD. I am interested in further exploring \textbf{computer-supported collaborative work (CSCW)} applied to STEM with an special emphasis in \textbf{music technology education} and \textbf{intelligent CSCW systems} by means of \textbf{music information retrieval} and \textbf{machine learning} algorithms.
+An interesting characteristic of these novel interfaces is their potential support to collaboration, an aspect that I have been working since my PhD. I am interested in further exploring \textbf{computer-supported collaborative work (CSCW)} applied to STEM with a special emphasis in \textbf{music technology education} and \textbf{intelligent CSCW systems} by means of \textbf{music information retrieval} and \textbf{machine learning} algorithms.
 
 \section*{Related publications}
 
@@ -122,7 +122,7 @@ An interesting characteristic of these novel interfaces is their potential suppo
 \item \textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch Interaction Principles for Collaborative Real-time Music Activities: Towards a Pattern Language”. In Proceedings of the International Computer Music Conference (ICMC ’11). Huddersffeld, UK. pp. 403–406.
 \end{itemize}
 
-\subsection*{Interaction Design}
+\subsection*{HCI}
 
 \begin{itemize}
 \item \textbf{Xambó, A.} (2017), “Embodied Music Interaction: Creative Design Synergies Between Music Performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London. pp. 207--220. ISBN 9781349952410.
@@ -134,6 +134,8 @@ An interesting characteristic of these novel interfaces is their potential suppo
 \subsection*{Intelligent Systems}
 
 \begin{itemize}
+\item \textbf{Xambó, A.}, Font, F., Fazekas, G., Barthet, M. (2019). Leveraging Online Audio Commons Content For Media Production. In Michael Filimowicz ed. Foundations in \emph{Sound Design for Linear Media: An Interdisciplinary Approach}. Routledge. pp. 248-282. ISBN 9781138093966.
+\item \textbf{Xambó, A.}, Lerch, A., Freeman, J. Music Information Retrieval in Live Coding: A Theoretical Framework. \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.
 \item Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). Semantic Audio Content-based Music Recommendation and Visualization Based on User Preference Examples. \emph{Information Processing \& Management}, 49(1), pp. 13-33.
 \item Haro, M.; \textbf{Xambó, A.}; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). The Musical Avatar: A Visualization of Musical Preferences by Means of Audio Content Description. In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.
 \end{itemize}
