--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -111,7 +111,7 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (2019, 2018, 2014, 2011, 2008); Web Audio Conference (2018, 2017); Audio Mostly (2018, 2017, 2010); Tangible, Embedded, and Embodied Interaction Conference (2018, 2017, 2011); International Conference on Computational Creativity (2017); International Conference on Live Coding (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing Conference (2016, 2012, 2010); International Conference of Live Interfaces (2016); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2012, 2011); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (2019, 2018, 2014, 2011, 2008); Web Audio Conference (2018, 2017); Audio Mostly (2018, 2017, 2010); Tangible, Embedded, and Embodied Interaction Conference (2018, 2017, 2011); International Conference on Computational Creativity (2017); International Conference on Live Coding (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing Conference (2016, 2012, 2010); International Conference of Live Interfaces (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2012, 2011); and International Computer Music Conference (2011).\\
 
 {\textbf{Performances}} at International Conference on Live Coding (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); Web Audio Conference (2018, 2017); Cube Fest (2018); New Interfaces for Musical Expression (2018, 2017); Tangible, Embedded, and Embodied Interaction Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); PHONOS (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
