--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -108,7 +108,7 @@ Leicester LE1 9BH United Kingdom\\[.2cm]
 \section*{Current Academic Roles}
 ---\emph{Senior Lecturer in Music and Audio Technology}, School of Computer Science and Informatics, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Program Co-Chair of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
+---\emph{Program Co-Chair of the International Conference on Live Interfaces 2020}, Department of Music, NTNU.\\
 ---\emph{Poster Chair of the 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\
 ---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
 ---\emph{Programme Committee Member}, Tenth Workshop on Ubiquitous Music, Porto Seguro, Brazil.
@@ -464,7 +464,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Webinars}
 \noindent
 
-\years{2016} \textbf{Xambó, A.} (October 28, 2016). “Debugging with EarSketch". GTCMT, Georgia Tech, Atlanta, GA, USA.\\[3cm]%hack
+\years{2016} \textbf{Xambó, A.} (October 28, 2016). “Debugging with EarSketch". GTCMT, Georgia Tech, Atlanta, GA, USA.%\\[3cm]%hack
 
 \section*{Discography}
 \noindent
@@ -506,7 +506,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera.\\
 \years{2013a}peterMann's “og02". (February 2, 2013). Störung Radio 127 on ScannerFM.\\
 \years{2010b}peterMann's “init 10--12". (December 18, 2010). Onda Sonora.\\
-\years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.\\[2cm]%hack
+\years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.%\\[2cm]%hack
 
 \section*{Selected Performances}
 \noindent
@@ -618,16 +618,19 @@ Role: Visuals \& Flash programming. \\ %(Flash animation and programming of the 
 Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 
 %\hrule
-\section*{Teaching}
+\section*{Teaching \& Coordination}
 \noindent
 
 \subsection*{Graduate Courses}
 \noindent
 
-\years{10/2019}Course: \emph{Human-Computer Interaction Lectures (2nd edition)} (8 h). \# Students: $\sim$14. \\
+\years{10/2019}Course: \emph{MCT4000 Music Communication and Technology)} \# Students: $\sim$14. \\
+Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
+Role: Coordination of this 15-credit course which includes 7 modules.\\
+\years{10/2019}Course: \emph{MCT4000 Human-Computer Interaction Lectures (2nd edition)} (8 h). \# Students: $\sim$14. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
-\years{10/2019}Course: \emph{Physical Computing Workshop (2nd edition)} (28 h). \# Students: $\sim$14. \\
+\years{10/2019}Course: \emph{MCT4000 Physical Computing Workshop (2nd edition)} (28 h). \# Students: $\sim$14. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{1/2019}Course: \emph{MCT4046 Sonification and Sound Design} (58 h). \# Students: $\sim$10. \\
@@ -636,10 +639,10 @@ Role: Creation of syllabus, creation of content, instruction, coordination of gu
 \years{1/2019}Course: \emph{MCT4048 Audio Programming} (58 h). \# Students: $\sim$11. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
-\years{10/2018}Course: \emph{Human-Computer Interaction Lectures} (8 h). \# Students: $\sim$15. \\
+\years{10/2018}Course: \emph{MCT4000 Human-Computer Interaction Lectures} (8 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
-\years{10/2018}Course: \emph{Physical Computing Workshop} (28 h). \# Students: $\sim$15. \\
+\years{10/2018}Course: \emph{MCT4000 Physical Computing Workshop} (28 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.
 
@@ -647,6 +650,15 @@ Role: Creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Undergraduate Courses}
 \noindent
 
+\years{01/2020--04/2020}Course: \emph{MATD1019 Audio Electronics Fundamentals} (12 h). \# Students: $\sim$12. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures, instruction and assessment.\\
+\years{01/2020--04/2020}Course: \emph{TECH2019 Audio Technology 2: Audio Electronics} (12 h). \# Students: $\sim$16. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Course leader, creation of content for lectures, instruction and assessment.\\
+\years{01/2020--04/2020}Course: \emph{TECH3011 Studio Technology: Audio Electronics} (12 h). \# Students: $\sim$16. \\
+De Montfort University, Leicester, UK.\\ 
+Role: Creation of content for lectures and labs, instruction and assessment.\\
 \years{02/2004--06/2004}Course: \emph{Experimental Motion Graphics} (45 h). \# Students: $\sim$15. \\
 Centre de la Imatge i la Technologia Multimèdia, Universitat Politècnica de Catalunya, Terrassa, Barcelona.\\ 
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
